# senseye

./: .gitignore  .travis.yml  LICENSE  README.md
attic/: hilbert.lua  keybindings.lua  pictune.lua  popup_menu.lua  senseye.lua  shaders.lua  translators.lua  wndshared.lua
attic/handlers/: cli.lua  control.lua  data.lua  luac.out
attic/menus/: cli.lua  system.lua
attic/senses/: mfsense_diff.lua
attic/support/: composition_surface.lua  gconf.lua  popup_menu.lua  uiprim.lua
attic/tools/: senseye.lua
attic/trash/senses/: msense.lua  psense.lua
attic/views/: alphamap.lua  patfind.lua  shaders.lua
attic/windows/: cli.lua
res/: .gitignore  arcandb.sqlite  composition_surface.lua  mouse.lua  popup_menu.lua  stringext.lua
senses/: CMakeLists.txt  font_8x8.h  fsense.c  integ_dbgif.h  integ_test.c  libsenseye.h  memif.h  memif_linux.c  memif_osx.c  msense.c  psense.c  rwstat.c  rwstat.h  sense_file.c  sense_file_ch.c  sense_linmem.c  sense_mem.c  sense_mfile.c  sense_osxmem.c  sense_pipe.c  sense_supp.c  sense_supp.h  senseye.c  senseye.h  xlt_ascii.c  xlt_capstone.c  xlt_crash.c  xlt_dpipe.c  xlt_hex.c  xlt_hex_color.h  xlt_img.c  xlt_overlay.c  xlt_pefile.c  xlt_pepe.c  xlt_seqver.c  xlt_supp.c  xlt_supp.h  xlt_verify.c
senseye/: .gitignore  alphamap.lua  autorun.lua  bbar.lua  clipboard.lua  clipboard_data.lua  composition_surface.lua  distgram.lua  extevh.lua  fglobal.lua  gconf.lua  handlers.lua  hilbert.lua  histogram.lua  iostatem.lua  keybindings.lua  lbar.lua  meta_guard.lua  modelwnd.lua  mouse.lua  patfind.lua  pictune.lua  popup_menu.lua  senseye.lua  shaders.lua  shdrmgmt.lua  suppl.lua  symtable.lua  tiler.lua  tools.lua  translators.lua  uiprim.lua  wndshared.lua
senseye/atypes/: sense_file.lua  sense_mem.lua  sense_mfile.lua  sense_pipe.lua  sensor.lua  terminal.lua  translator.lua
senseye/dumps/: .gitignore
senseye/handlers/: cli.lua  control.lua  data.lua  translator.lua
senseye/menus/: data.lua  system.lua
senseye/menus/data/: data.lua
senseye/menus/global/: audio.lua  config.lua  global.lua  input.lua  open.lua  record.lua  remoting.lua  shaders.lua  system.lua  workspace.lua
senseye/senses/: fsense.lua  mfsense.lua  mfsense_diff.lua  msense.lua  msense_main.lua  psense.lua
senseye/senseye/: histogram.lua  luac.out  patfind.lua
senseye/shaders/audio/: bars.lua
senseye/shaders/color/: alpha.lua  highlight.lua  lut.lua  normal.lua  rgsplit.lua
senseye/shaders/display/: basic.lua
senseye/shaders/pcloud/: trigram.lua
senseye/shaders/simple/: autocrop.lua  crop.lua  noalpha.lua
senseye/shaders/ui/: border.lua  lbar.lua  lbar_tile.lua  lbar_tiletext.lua  lbarbg.lua  regsel.lua  sbar_item.lua  sbar_item_bg.lua  sbar_msg_bg.lua  sbar_msg_text.lua  statusbar.lua  titlebar.lua  titlebar_icon.lua  titlebar_iconbg.lua  titlebar_text.lua
senseye/support/: apiext.lua  composition_surface.lua  mouse.lua  popup_menu.lua
senseye/tools/: histogram.lua  pointcloud.lua  view.lua
senseye/trash/: scrap.lua  translators.lua
senseye/trash/senses/: fsense.lua  mfsense.lua
senseye/views/: histogram.lua  shaders.lua
senseye/widgets/: ascii.lua  bindings.lua
senseye/widgets/support/: text.lua
senseye/windows/: data.lua
tests/: README
